--- a/pkg/delivery/signin.html
+++ b/pkg/delivery/signin.html
@@ -10,7 +10,7 @@
             data-client_id="987971639793-n2adesr00a73mp5rj9p2req3qrdscrtc.apps.googleusercontent.com"
             data-context="signin"
             data-ux_mode="redirect"
-            data-login_uri="http://localhost:8080/signin"
+            data-login_uri="http://localhost:8080/signin/with-google"
             data-auto_prompt="false">
         </div>
 
